Adding some ginx snippets

--- a/roles/nginx/templates/nginx.conf.j2
+++ b/roles/nginx/templates/nginx.conf.j2
@@ -11,5 +11,10 @@ server{
 {% if public_ipv6 %}
   listen [::]:80;
 {% endif %}
+
+  location / {
+    charset utf-8;
+    try_files $uri $uri/ =404;
+  }
 }
 
